--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "nodemon": "^2.0.1"
   }
